@@ -113,8 +113,6 @@ PKG_CHECK_MODULES(PLANNER,
 	$gda_pkgconfig
 ])
 
-#	mono
-
 AC_SUBST(PLANNER_CFLAGS)
 AC_SUBST(PLANNER_LIBS)
 dnl -----------------------------------------------------------
@@ -223,7 +221,7 @@ AC_ARG_ENABLE(python, [  --enable-python        build python bindings [default=a
 dnl  --------------
 dnl | dotnet setup |--------------------------------------------
 dnl  --------------
-AC_ARG_ENABLE(dotnet, [  --enable-dotnet        build dotnet bindings [default=auto]], enable_dotnet="$enableval", enable_dotnet=auto)
+AC_ARG_ENABLE(dotnet, [  --enable-dotnet        build dotnet bindings [default=auto]], enable_dotnet="$enableval", enable_dotnet=no)
 
 if test "x$enable_dotnet" != "xno"; then
     PKG_CHECK_MODULES(,gtk-sharp,have_dotnet=yes,have_dotnet=no)
