@@ -2640,8 +2640,8 @@ planner_task_tree_move_task_up (PlannerTaskTree *tree)
 
 		/* FIXME: This checking isn't enough, we need to check if any
 		 * ancestor of the task is selected. The following won't pick up
-		 * unusual selections e.g. if just 1.1 and 1.1.1.1 selected.
-		 * To do that we need to recurse this selection list.
+		 * unusual selections e.g. if just 1.1 and 1.1.1.1 selected. To
+		 * do that we need to recurse this selection list.
 		 */
 		 
  		skip = FALSE;
@@ -2701,6 +2701,7 @@ planner_task_tree_move_task_down (PlannerTaskTree *tree)
 	gboolean	   proceed, skip;
 	gint		   count;
 	MrpTask           *anchor_task;
+	MrpTask           *root;
 
 	/* FIXME: undo */
 
@@ -2722,6 +2723,8 @@ planner_task_tree_move_task_down (PlannerTaskTree *tree)
 	} else {
 		anchor_task = NULL;
 	}
+
+	root = mrp_project_get_root_task (project);
 	
 	list = g_list_reverse (list);
 
@@ -2741,8 +2744,8 @@ planner_task_tree_move_task_down (PlannerTaskTree *tree)
 		
 		/* FIXME: This checking isn't enough, we need to check if any
 		 * ancestor of the task is selected. The following won't pick up
-		 * unusual selections e.g. if just 1.1 and 1.1.1.1 selected.
-		 * To do that we need to recurse this selection list.
+		 * unusual selections e.g. if just 1.1 and 1.1.1.1 selected. To
+		 * do that we need to recurse this selection list.
 		 */
 		skip = FALSE;
 		for (m = list; m; m = m->next) {
@@ -2752,15 +2755,16 @@ planner_task_tree_move_task_down (PlannerTaskTree *tree)
 			}
 		}
 
-		if (parent == mrp_project_get_root_task (project) && position == mrp_task_get_n_children (mrp_project_get_root_task (project)) - 1) {
-			/* We stop if at bottom of project and our parent is root task.
+		if (parent == root && position == mrp_task_get_n_children (root) - 1) {
+			/* We stop if at bottom of project and our parent is
+			 * root task.
 			 */
 			proceed = FALSE;
 		}
 		else if (!skip && position == mrp_task_get_n_children (parent) - 1) {
 			/* If the parent task was selected then we don't care if
-			 * we are at the bottom of our particular position. Note NOT
-			 * all possible selection cases are catered for. 
+			 * we are at the bottom of our particular position. Note
+			 * NOT all possible selection cases are catered for.
 			 */ 
 			proceed = FALSE;
 		}
